--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "electron src/main.js"
   },
   "devDependencies": {
-    "electron": "^17.0.0"
+    "electron": "^17.0.0",
+    "typescript": "^4.5.5"
   }
 }
