--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "start": "npm run build && electron ./src/electron.js"
   },
   "devDependencies": {
+    "@types/react": "^17.0.39",
+    "@types/react-dom": "^17.0.11",
     "electron": "^17.0.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "ts-loader": "^9.2.6",
     "typescript": "^4.5.5",
     "webpack": "^5.68.0",
